Use real screencast

--- a/index.html
+++ b/index.html
@@ -32,12 +32,7 @@
         perform typical steps in collaborative software development workflows.
       </p>
 
-      <div style="width: 600px; height: 400px; border: 1px solid black; margin: 0 auto 30px; text-align: center; padding: 50px; font-size: 30pt; color: #AAA;">
-        [ screencast ]
-        <br>
-        <br>
-        (coming soon)
-      </div>
+      <iframe src="https://docs.google.com/a/originate.com/file/d/0BxFxxboeZOPlMTJWN3RraG9XVDQ/preview" width="640" height="480"></iframe>
 
       <p>
         Check out <a href="big_picture.html">the big picture</a> for more background on Git Town,
