Make the video larger

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
         perform typical steps in collaborative software development workflows.
       </p>
 
-      <iframe src="https://docs.google.com/a/originate.com/file/d/0BxFxxboeZOPlMTJWN3RraG9XVDQ/preview" width="640" height="480"></iframe>
+      <iframe src="https://docs.google.com/a/originate.com/file/d/0BxFxxboeZOPlMTJWN3RraG9XVDQ/preview"
+              width="800"
+              height="450">
+      </iframe>
 
       <p>
         Check out <a href="big_picture.html">the big picture</a> for more background on Git Town,
