Add bullet points

--- a/index.html
+++ b/index.html
@@ -32,6 +32,16 @@
         perform typical steps in collaborative software development workflows.
       </p>
 
+      <ul>
+        <li>works with many branching strategies and naming conventions</li>
+        <li>compatible with git-flow and other git tools</li>
+        <li>shows the underlying git commands</li>
+      </ul>
+
+      <br>
+      <hr>
+      <br>
+
       <iframe src="https://docs.google.com/a/originate.com/file/d/0BxFxxboeZOPlMTJWN3RraG9XVDQ/preview"
               width="800"
               height="450">
