--- a/index.html
+++ b/index.html
@@ -1,63 +1,11 @@
-<!DOCTYPE html>
-<html lang="en-us">
-  <head>
-    <meta charset="UTF-8">
-    <title>Git Town by Originate</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" type="text/css" href="stylesheets/normalize.css" media="screen">
-    <link href='http://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
-    <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
-  </head>
-  <body>
-
-    <section class="page-header">
-      <a href="/"><img src="documentation/logo-horizontal-white.svg"></a>
-      <h2 class="project-tagline">High-level command-line interface for Git </h2>
-      <a href="big_picture.html" class="btn">About</a>
-      <a href="tutorial.html" class="btn">Tutorial</a>
-      <a href="faq.html" class="btn">FAQ</a>
-      <a href="https://github.com/Originate/git-town#installation" class="btn" target="_blank">Install</a>
-      <a href="https://github.com/Originate/git-town" class="btn" target="_blank">View on Github</a>
-      <a href="https://twitter.com/GitTown" class="btn" target="_blank">Follow on Twitter</a>
-      <!-- <a href="https://github.com/Originate/git&#45;town" class="btn"><img src="documentation/mark&#45;github.svg" width="30" height="30"></img>  </a> -->
-    </section>
-
-    <section class="main-content">
-      <p>
-        Git Town is an open-source Git plugin
-        that makes using Git on the command line even more productive and convenient.
-
-        It provides additional high-level Git commands that
-        perform typical steps in collaborative software development workflows.
-      </p>
-
-      <ul>
-        <li>works with many branching strategies and naming conventions</li>
-        <li>compatible with git-flow and other git tools</li>
-        <li>shows the underlying git commands</li>
-      </ul>
-
-      <br>
-      <hr>
-      <br>
-
-      <iframe src="https://docs.google.com/a/originate.com/file/d/0BxFxxboeZOPlcjRiVjV5b0c4Qmc/preview"
-              width="800"
-              height="450">
-      </iframe>
-
-      <p>
-        Check out <a href="big_picture.html">the big picture</a> for more background on Git Town,
-        <a href="">the tutorial</a> to get an idea for how it works,
-        or <a href="">install</a> it right now!
-      </p>
-
-      <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/Originate/git-town">Git Town</a> is maintained by <a href="http://www.originate.com">Originate</a></span>
-      </footer>
-
-    </section>
-  </body>
-</html>
-
+<!DOCTYPE html><html><head><title>Welcome to GitTown | Git Town</title><meta name="viewport" content="width=device-width, initial-scale=1"/><meta name="description" content="Git Town."/><meta name="keywords" content="git, gittown, town"/><meta property="og:title" content="Git Town"/><meta property="og:type" content=""/><meta property="og:image" content=""/><meta property="og:description" content="Git Town."/><meta property="twitter:title"/><meta property="twitter:description" content="Git Town."/><link rel="stylesheet" href="css/application.css"><link href="http://fonts.googleapis.com/css?family=Oleo+Script|Open+Sans:400,300,700" rel="stylesheet" type="text/css"><link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"></head><body class="index"><header><a href="/" class="logo"><img src="img/git-town-horizontal.svg" alt="Gittown"/></a><a href="https://github.com/Originate/git-town" class="github ion-social-github">View On GitHub</a><nav><ul><li><a href="index.html">Home</a></li><li><a href="install.html">Install</a></li><li><a href="the-big-picture.html">The Big Picture</a></li><li><a href="tutorial.html">Tutorial</a></li></ul></nav></header><section class="hero"><div class="container"><div class="left"><h2>High-level command-line interface for Git</h2><p>Git Town is an open-source Git plugin
+that provides high-level Git commands
+to make feature-branch based development
+more efficient and safe.</p><div class="buttons"><a href="/install.html" class="button learn-more">Install</a></div></div><iframe src="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlcjRiVjV5b0c4Qmc/preview" width="550" height="300" frameborder="0" class="intro-video"></iframe></div></section><section class="tagline"><h2>A workflow layer on top of vanilla Git</h2><p>Git is an intentionally generic and basic tool.
+It supports many different ways of using it equally well.
+It is a wonderful <i>foundation</i> for source code management.</p><p>Using it properly as a developer is cumbersome and repetitive, though. <br>
+As an example, safely merging a finished feature branch
+requires up to <br>
+<a href="https://github.com/Originate/git-town/blob/master/features/git-ship/supplied_branch/feature_branch/with_tracking_branch.feature#L19-L33">
+<b>15</b></a> individual Git commands!</p><div class="buttons"><a href="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlcjRiVjV5b0c4Qmc/view" class="button view-more">View screencast</a>&nbsp; &nbsp; &nbsp; &nbsp;<a href="/the-big-picture.html" class="button learn-more">more background</a></div></section><section class="commands"><h2><span class="powerful">Powerful commands</span></h2><p>Git Town adds a number of high-level Git commands that automate
+typical operations in the software development workflow.</p><div class="commands"><a href="https://github.com/Originate/git-town/blob/master/documentation/commands/git-hack.md" target="_blank"><div class="command"><h3>$ git hack</h3><p>Cuts a new up-to-date feature branch off the main branch.</p></div></a><a href="https://github.com/Originate/git-town/blob/master/documentation/commands/git-sync.md" target="_blank"><div class="command"><h3>$ git sync</h3><p>Updates your current branch with all ongoing changes.</p></div></a><a href="https://github.com/Originate/git-town/blob/master/documentation/commands/git-new-pull-request.md" target="_blank"><div class="command"><h3>$ git new-pull-request</h3><p>Create a new pull request on GitHub or BitBucket for your current branch.</p></div></a><a href="https://github.com/Originate/git-town/blob/master/documentation/commands/git-ship.md" target="_blank"><div class="command"><h3>$ git ship</h3><p>Delivers your completed feature branch and removes it.</p></div></a><a href="https://github.com/Originate/git-town#commands" class="button view-more">View all commands</a></div></section><section class="faq"><h2>FAQ</h2><h3>Does this force me into any conventions for my branches or commits?</h3><p>Not at all. Git Town doesn’t require or enforce any particular naming convention or branch setup, and works with a wide variety of Git branching models and workflows.</p><h3>How is this different from Git Flow?</h3><p>Git Flow is a Git extension that provides specific and opinionated support for the powerful Git branching model with the same name. It doesn’t care too much about how you keep your work in sync with the rest of the team.</p><h3>Git Town doesn’t care much about which branching model you use. It makes you and your team more productive and keeps your Git repo clean.</h3><p>It is possible (and encouraged) to use the two tools together.</p><h3>Which Git branching models are supported by Git Town?</h3><p>Git Town is so generic that it supports all the branching models that we are aware of, for example GitHub Flow, GitLab Flow, Git Flow, and even working straight off the master branch.</p><h3>Is it compatible with my other Git tools?</h3><p>Yes, we try to be good citizens. If you run into any issues with your setup, please let us know!</p><div class="buttons"><a href="/install.html" class="button learn-more">Install</a></div></section><section class="town"><img src="img/git-town-town.svg"></section></body></html>
