Updates to website

--- a/tutorial.html
+++ b/tutorial.html
@@ -48,9 +48,9 @@ and to give you a chance to resolve any issues before merging into <em>master</e
 <li>push the updated <em>master</em> branch to the repository (so that your changes are available to Bob and Alice in return)</li>
 <li>remove the <em>password-reset</em> branch from your local machine and the repository</li>
 </ul>
-<p>This requires from 7-9 individual Git commands.
+<p>This requires between 10-15 individual Git commands.
 Git Town provides a single, convenient command for this as well:
 <code>git ship reset-passwords</code>.</p>
 <p>After running this, your feature is now safely merged as a single additional commit on the <em>master</em> branch,
-then the old feature branch is cleaned up everywhere,
+the old feature branch is cleaned up everywhere,
 and you and the repository are ready for the next feature.</p></main></body></html>
