--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ for Git</h2><p>Git Town is an open-source Git plugin.<br>
 It adds Git commands
 that make collaborative software development
 more efficient and safe.
-</p><div class="buttons"><a href="/install.html" class="button learn-more">Install</a></div></div><iframe src="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlWjFkM1BPek9MUFE/preview" width="550" height="300" frameborder="0" class="intro-video"></iframe></div></section><section class="tagline"><h2>A workflow layer on top of vanilla Git</h2><p>Git is a great <i>foundation</i> for source code management. <br>
+</p><div class="buttons"><a href="/install.html" class="button learn-more">Install</a></div></div><iframe width="550" height="300" src="https://www.youtube.com/embed/quYrf9ssi1A?rel=0" frameborder="0" allowfullscreen class="intro-video"></iframe></div></section><section class="tagline"><h2>A workflow layer on top of vanilla Git</h2><p>Git is a great <i>foundation</i> for source code management. <br>
 It provides all required pieces of functionality, <br>
 and supports many different ways of using it equally well. <br>
 </p><p>It is intentionally generic and basic, though. <br>
