Improve formatting of paragraphs

--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@ for Git</h2><p>Git Town is an open-source Git plugin.<br>
 It adds Git commands
 that make collaborative software development
 more efficient and safe.
-</p><div class="buttons"><a href="/install.html" class="button learn-more">Install</a></div></div><iframe width="550" height="300" src="https://www.youtube.com/embed/quYrf9ssi1A?rel=0" frameborder="0" allowfullscreen class="intro-video"></iframe></div></section><section class="tagline"><h2>A workflow layer on top of vanilla Git</h2><p>Git is a great <i>foundation</i> for source code management. <br>
-It provides all required pieces of functionality, <br>
+</p><div class="buttons"><a href="/install.html" class="button learn-more">Install</a><a href="https://github.com/Originate/git-town#commands" class="button commands">See the Commands</a></div></div><iframe width="550" height="300" src="https://www.youtube.com/embed/quYrf9ssi1A?rel=0" frameborder="0" allowfullscreen class="intro-video"></iframe></div></section><section class="tagline"><h2>A workflow layer on top of vanilla Git</h2><p><a href="https://git-scm.com" target="_blank">Git</a> is a great <i>foundation</i> for source code management.
+It provides all required pieces of functionality,
 and supports many different ways of using it equally well. <br>
-</p><p>It is intentionally generic and basic, though. <br>
-Using it properly as a developer is cumbersome and repetitive. <br>
-For example, correctly merging a finished feature branch
-requires <br>
+</p><p>It is intentionally generic and basic, though.
+Using it properly as a developer is cumbersome and repetitive.
+For example, correctly merging a finished feature branch requires
 up to <a href="https://github.com/Originate/git-town/blob/217f31e633d400d3eefed94f86b35a10838f1ebe/features/git-ship/supplied_branch/feature_branch/with_tracking_branch.feature#L19-L33">
 <b>15</b></a> individual Git commands!
-</p><p>Git Town adds a layer of high-level commands to Git. <br>
-They perform typical development workflow operations <br>
-like creating or shipping feature branches, <br>
+</p><p>Git Town adds a layer of high-level commands to Git.
+They perform typical development workflow operations
+like creating or shipping feature branches,
 similar to how an expert Git user would do it.
-</p><p>All while being as generic and unopinionated as Git.</p><div class="buttons"><a href="https://drive.google.com/a/originate.com/file/d/0BxFxxboeZOPlWjFkM1BPek9MUFE/view" target="_blank" class="button view-more">View screencast</a><a href="/tutorial.html" class="button learn-more">view tutorial</a></div></section><section class="commands"><h2><span class="powerful">Powerful commands</span></h2><p>Git Town adds a number of high-level Git commands that automate
+All while being as generic and unopinionated as Git.
+</p><div class="buttons"><a href="https://youtu.be/quYrf9ssi1A" target="_blank" class="button view-more">View screencast</a><a href="/tutorial.html" class="button learn-more">view tutorial</a></div></section><section class="commands"><h2><span class="powerful">Powerful commands</span></h2><p>Git Town adds a number of high-level Git commands that automate
 typical operations in the software development workflow.
 </p><div class="commands"><a href="https://github.com/Originate/git-town/blob/master/documentation/commands/git-hack.md" target="_blank"><div class="command"><h3>$ git hack</h3><p>Cuts a new up-to-date feature branch off the main branch.</p></div></a><a href="https://github.com/Originate/git-town/blob/master/documentation/commands/git-sync.md" target="_blank"><div class="command"><h3>$ git sync</h3><p>Updates your current branch with all ongoing changes.</p></div></a><a href="https://github.com/Originate/git-town/blob/master/documentation/commands/git-new-pull-request.md" target="_blank"><div class="command"><h3>$ git new-pull-request</h3><p>Create a new pull request on GitHub or BitBucket for your current branch.</p></div></a><a href="https://github.com/Originate/git-town/blob/master/documentation/commands/git-ship.md" target="_blank"><div class="command"><h3>$ git ship</h3><p>Delivers your completed feature branch and removes it.</p></div></a><a href="https://github.com/Originate/git-town#commands" class="button view-more">View all commands</a></div></section><section class="faq"><h2>FAQ</h2><h3>Does this force me into any conventions for my branches or commits?</h3><p>Not at all.
 Git Town doesn’t require or enforce any particular naming convention or branch setup.
@@ -35,4 +35,4 @@ It focusses on keeping your team synchronized and your code repository clean.
 </p><p>It is possible (and encouraged) to use the two tools together.
 </p><h3>Is it compatible with my other Git tools?</h3><p>Yes, we try to be good citizens.
 If you run into any issues with your setup, please
-<a href="https://github.com/Originate/git-town/issues/new" target="_blank">let&nbsp;us&nbsp;know</a>!</p><div class="buttons"><a href="/install.html" class="button learn-more">Install</a></div></section><section class="town"><img src="img/git-town-town.svg"></section></body></html>
+<a href="https://github.com/Originate/git-town/issues/new" target="_blank">let&nbsp;us&nbsp;know</a>!</p><div class="buttons"><a href="/install.html" class="button learn-more">Install</a><a href="https://twitter.com/GitTown" target="_blank" class="button twitter">Ask a question</a></div></section><section class="town"><img src="img/git-town-town.svg"></section></body></html>
