--- a/404.html
+++ b/404.html
@@ -1,1 +1,18 @@
-<!DOCTYPE html><html><head><title>undefined | Git Town</title><meta name="viewport" content="width=device-width, initial-scale=1"/><meta name="description" content="Git Town."/><meta name="keywords" content="git, gittown, town"/><meta property="og:title" content="Git Town"/><meta property="og:type" content=""/><meta property="og:image" content=""/><meta property="og:description" content="Git Town."/><meta property="twitter:title"/><meta property="twitter:description" content="Git Town."/><link rel="stylesheet" href="css/application.css"><link href="http://fonts.googleapis.com/css?family=Oleo+Script|Open+Sans:400,300,700" rel="stylesheet" type="text/css"><link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"></head><body class="404"><header><a href="/" class="logo"><img src="img/git-town-horizontal.svg" alt="Gittown"/></a><a href="https://github.com/Originate/git-town" class="github ion-social-github">View On GitHub</a><nav><ul><li><a href="index.html">Home</a></li><li><a href="install.html">Install</a></li><li><a href="tutorial.html">Tutorial</a></li></ul></nav></header><h1 class="pagetitle"></h1><main><h1>404</h1><p>Page not found. Bummer.</p></main></body></html>
+<!DOCTYPE html><html><head><title>undefined | Git Town</title><meta name="viewport" content="width=device-width, initial-scale=1"/><meta name="description" content="Git Town."/><meta name="keywords" content="git, gittown, town"/><meta property="og:title" content="Git Town"/><meta property="og:type" content=""/><meta property="og:image" content=""/><meta property="og:description" content="Git Town."/><meta property="twitter:title"/><meta property="twitter:description" content="Git Town."/><link rel="stylesheet" href="css/application.css"><link href="http://fonts.googleapis.com/css?family=Oleo+Script|Open+Sans:400,300,700" rel="stylesheet" type="text/css"><link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"></head><body class="404"><header><a href="/" class="logo"><img src="img/git-town-horizontal.svg" alt="Gittown"/></a><a href="https://github.com/Originate/git-town" class="github ion-social-github">View On GitHub</a><nav><div id="hamburger" class="ion-navicon-round"></div><ul id="menu"><li><a href="index.html">Home</a></li><li><a href="install.html">Install</a></li><li><a href="tutorial.html">Tutorial</a></li><li class="github"><a href="https://github.com/Originate/git-town" class="github ion-social-github">View On GitHub</a></li></ul></nav><script>var toggle = document.getElementById('hamburger');
+var menu = document.getElementById('menu');
+
+toggle.onclick = function(){
+  if (menu.classList) {
+    menu.classList.toggle('open');
+  } else {
+    var classes = menu.className.split(' ');
+    var existingIndex = classes.indexOf('open');
+
+    if (existingIndex >= 0)
+      classes.splice(existingIndex, 1);
+    else
+      classes.push('open');
+
+    menu.className = classes.join(' ');
+  }
+}</script></header><h1 class="pagetitle"></h1><main><h1>404</h1><p>Page not found. Bummer.</p></main></body></html>
