--- a/index.html
+++ b/index.html
@@ -1,17 +1,32 @@
-<!DOCTYPE html><html><head><title>Welcome to GitTown | Git Town</title><meta name="viewport" content="width=device-width, initial-scale=1"/><meta name="description" content="Git Town."/><meta name="keywords" content="git, gittown, town"/><meta property="og:title" content="Git Town"/><meta property="og:type" content=""/><meta property="og:image" content=""/><meta property="og:description" content="Git Town."/><meta property="twitter:title"/><meta property="twitter:description" content="Git Town."/><link rel="stylesheet" href="css/application.css"><link href="http://fonts.googleapis.com/css?family=Oleo+Script|Open+Sans:400,300,700" rel="stylesheet" type="text/css"><link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"></head><body class="index"><header><a href="/" class="logo"><img src="img/git-town-horizontal.svg" alt="Gittown"/></a><a href="https://github.com/Originate/git-town" class="github ion-social-github">View On GitHub</a><nav><ul><li><a href="index.html">Home</a></li><li><a href="install.html">Install</a></li><li><a href="tutorial.html">Tutorial</a></li></ul></nav></header><section class="hero"><div class="container"><div class="left"><h2>High-level <br>
+<!DOCTYPE html><html><head><title>Welcome to GitTown | Git Town</title><meta name="viewport" content="width=device-width, initial-scale=1"/><meta name="description" content="Git Town."/><meta name="keywords" content="git, gittown, town"/><meta property="og:title" content="Git Town"/><meta property="og:type" content=""/><meta property="og:image" content=""/><meta property="og:description" content="Git Town."/><meta property="twitter:title"/><meta property="twitter:description" content="Git Town."/><link rel="stylesheet" href="css/application.css"><link href="http://fonts.googleapis.com/css?family=Oleo+Script|Open+Sans:400,300,700" rel="stylesheet" type="text/css"><link rel="stylesheet" href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css"></head><body class="index"><header><a href="/" class="logo"><img src="img/git-town-horizontal.svg" alt="Gittown"/></a><a href="https://github.com/Originate/git-town" class="github ion-social-github">View On GitHub</a><nav><div id="hamburger" class="ion-navicon-round"></div><ul id="menu"><li><a href="index.html">Home</a></li><li><a href="install.html">Install</a></li><li><a href="tutorial.html">Tutorial</a></li><li class="github"><a href="https://github.com/Originate/git-town" class="github ion-social-github">View On GitHub</a></li></ul></nav><script>var toggle = document.getElementById('hamburger');
+var menu = document.getElementById('menu');
+
+toggle.onclick = function(){
+  if (menu.classList) {
+    menu.classList.toggle('open');
+  } else {
+    var classes = menu.className.split(' ');
+    var existingIndex = classes.indexOf('open');
+
+    if (existingIndex >= 0)
+      classes.splice(existingIndex, 1);
+    else
+      classes.push('open');
+
+    menu.className = classes.join(' ');
+  }
+}</script></header><section class="hero"><div class="container"><div class="left"><h2>High-level <br>
 command line interface
 for Git</h2><p>Git Town is an open-source Git plugin.<br>
 It adds Git commands
 that make collaborative software development
 more efficient and safe.
-</p><div class="buttons"><a href="/install.html" class="button learn-more">Install</a><a href="https://github.com/Originate/git-town#commands" class="button commands">See the Commands</a></div></div><iframe width="550" height="300" src="https://www.youtube.com/embed/quYrf9ssi1A?rel=0" frameborder="0" allowfullscreen class="intro-video"></iframe></div></section><section class="tagline"><h2>A workflow layer on top of vanilla Git</h2><p><a href="https://git-scm.com" target="_blank">Git</a> is a great <i>foundation</i> for source code management.
-It provides all required pieces of functionality,
-and supports many different ways of using it equally well. <br>
-</p><p>It is intentionally generic and basic, though.
+</p><div class="buttons"><a href="/install.html" class="button learn-more">Install</a><a href="https://github.com/Originate/git-town#commands" class="button commands">See the Commands</a></div></div><iframe width="550" height="300" src="https://www.youtube.com/embed/quYrf9ssi1A?rel=0" frameborder="0" allowfullscreen class="intro-video"></iframe></div></section><section class="tagline"><h2>A workflow layer on top of vanilla Git</h2><p><a href="https://git-scm.com" target="_blank">Git</a> is a great <i>foundation</i> for source code management. It provides all required pieces of functionality,
+and supports many different ways of using it equally well.</p><p>It is intentionally generic and basic, though.
 Using it properly as a developer is cumbersome and repetitive.
 For example, correctly merging a finished feature branch requires
 up to <a href="https://github.com/Originate/git-town/blob/217f31e633d400d3eefed94f86b35a10838f1ebe/features/git-ship/supplied_branch/feature_branch/with_tracking_branch.feature#L19-L33">
-<b>15</b></a> individual Git commands!
+<strong>15</strong></a> individual Git commands!
 </p><p>Git Town adds a layer of high-level commands to Git.
 They perform typical development workflow operations
 like creating or shipping feature branches,
@@ -19,7 +34,7 @@ similar to how an expert Git user would do it.
 All while being as generic and unopinionated as Git.
 </p><div class="buttons"><a href="https://youtu.be/quYrf9ssi1A" target="_blank" class="button view-more">View screencast</a><a href="/tutorial.html" class="button learn-more">view tutorial</a></div></section><section class="commands"><h2><span class="powerful">Powerful commands</span></h2><p>Git Town adds a number of high-level Git commands that automate
 typical operations in the software development workflow.
-</p><div class="commands"><a href="https://github.com/Originate/git-town/blob/master/documentation/commands/git-hack.md" target="_blank"><div class="command"><h3>$ git hack</h3><p>Cuts a new up-to-date feature branch off the main branch.</p></div></a><a href="https://github.com/Originate/git-town/blob/master/documentation/commands/git-sync.md" target="_blank"><div class="command"><h3>$ git sync</h3><p>Updates your current branch with all ongoing changes.</p></div></a><a href="https://github.com/Originate/git-town/blob/master/documentation/commands/git-new-pull-request.md" target="_blank"><div class="command"><h3>$ git new-pull-request</h3><p>Create a new pull request on GitHub or BitBucket for your current branch.</p></div></a><a href="https://github.com/Originate/git-town/blob/master/documentation/commands/git-ship.md" target="_blank"><div class="command"><h3>$ git ship</h3><p>Delivers your completed feature branch and removes it.</p></div></a><a href="https://github.com/Originate/git-town#commands" class="button view-more">View all commands</a></div></section><section class="faq"><h2>FAQ</h2><h3>Does this force me into any conventions for my branches or commits?</h3><p>Not at all.
+</p><div class="commands container"><a href="https://github.com/Originate/git-town/blob/master/documentation/commands/git-hack.md" target="_blank"><div class="command"><h3>$ git hack</h3><p>Cuts a new up-to-date feature branch off the main branch.</p></div></a><a href="https://github.com/Originate/git-town/blob/master/documentation/commands/git-sync.md" target="_blank"><div class="command"><h3>$ git sync</h3><p>Updates your current branch with all ongoing changes.</p></div></a><a href="https://github.com/Originate/git-town/blob/master/documentation/commands/git-new-pull-request.md" target="_blank"><div class="command"><h3>$ git new-pull-request</h3><p>Create a new pull request on GitHub or BitBucket for your current branch.</p></div></a><a href="https://github.com/Originate/git-town/blob/master/documentation/commands/git-ship.md" target="_blank"><div class="command"><h3>$ git ship</h3><p>Delivers your completed feature branch and removes it.</p></div></a></div><a href="https://github.com/Originate/git-town#commands" class="button view-more">View all commands</a></section><section class="faq"><h2>FAQ</h2><h3>Does this force me into any conventions for my branches or commits?</h3><p>Not at all.
 Git Town doesn’t require or enforce any particular naming convention or branch setup.
 It works with a wide variety of Git branching models and workflows.
 </p><h3>Which Git branching models are supported by Git Town?</h3><p>Git Town is so generic that it supports all the branching models that we are aware of,
