--- a/index.html
+++ b/index.html
@@ -50,4 +50,4 @@ It focusses on keeping your team synchronized and your code repository clean.
 </p><p>It is possible (and encouraged) to use the two tools together.
 </p><h3>Is it compatible with my other Git tools?</h3><p>Yes, we try to be good citizens.
 If you run into any issues with your setup, please
-<a href="https://github.com/Originate/git-town/issues/new" target="_blank">let&nbsp;us&nbsp;know</a>!</p><div class="buttons"><a href="/install.html" class="button learn-more">Install</a><a href="https://twitter.com/GitTown" target="_blank" class="button twitter">Ask a question</a></div></section><section class="town"><img src="img/git-town-town.svg"></section></body></html>
+<a href="https://github.com/Originate/git-town/issues/new" target="_blank">let&nbsp;us&nbsp;know</a>!</p><div class="buttons"><a href="/install.html" class="button learn-more">Install</a><a href="https://twitter.com/GitTown" target="_blank" class="button twitter ion-social-twitter">Ask a question</a></div></section><section class="town"><img src="img/git-town-town.svg"></section></body></html>
