--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ for Git</h2><p>Git Town is an open-source Git plugin.<br>
 It adds Git commands
 that make collaborative software development
 more efficient and safe.
-</p><div class="buttons"><a href="/install.html" class="button learn-more">Install</a><a href="https://github.com/Originate/git-town#commands" class="button commands">See the Commands</a></div></div><iframe width="550" height="300" src="https://www.youtube.com/embed/quYrf9ssi1A?rel=0" frameborder="0" allowfullscreen class="intro-video"></iframe></div></section><section class="tagline"><h2>A workflow layer on top of vanilla Git</h2><p><a href="https://git-scm.com" target="_blank">Git</a> is a great <i>foundation</i> for source code management. It provides all required pieces of functionality,
+</p><div class="buttons"><a href="/install.html" class="button learn-more">Install</a><a href="https://github.com/Originate/git-town#commands" class="button commands">See the Commands</a></div></div><iframe width="550" height="300" src="https://www.youtube.com/embed/oLaUsUlFfTo" frameborder="0" allowfullscreen class="intro-video"></iframe></div></section><section class="tagline"><h2>A workflow layer on top of vanilla Git</h2><p><a href="https://git-scm.com" target="_blank">Git</a> is a great <i>foundation</i> for source code management. It provides all required pieces of functionality,
 and supports many different ways of using it equally well.</p><p>It is intentionally generic and basic, though.
 Using it properly as a developer is cumbersome and repetitive.
 For example, correctly merging a finished feature branch requires
